Copy /personal from my configs on Shopify repo

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,6 @@
 {
+  "html.format.templating": true,
+  "coc.preferences.formatOnType": true,
   "languageserver": {
     "ruby-lsp": {
       "command": "bundle",
