--- a/.gitconfig
+++ b/.gitconfig
@@ -1,1 +1,3 @@
 # Add your preferred git settings here. This will overwrite anything in `core/configs/.gitconfig`.
+user.name=Lekë Mula
+user.email=leke.mula@gmail.com
