Update changes from Shopify dotenv repo

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "solargraph.completion": false,
   "html.format.templating": true,
   "coc.preferences.formatOnType": true,
   "languageserver": {
