--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "codeLens.enable": true,
   "solargraph.completion": false,
   "html.format.templating": true,
   "coc.preferences.formatOnType": true,
@@ -35,6 +36,12 @@
       "command": "metals-vim",
       "rootPatterns": ["build.sbt"],
       "filetypes": ["scala", "sbt"]
+    },
+    "clangd": {
+      "command": "clangd",
+      "filetypes": ["c", "cpp", "objc", "objcpp"],
+      "rootPatterns": [".clangd", "compile_commands.json", ".git/", ".hg/"],
+      "args": ["--compile-commands-dir=build", "--fallback-style=Google"]
     }
   }
 }
