Add RVM Zsh autocompletion

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -20,7 +20,8 @@
           "inlayHint",
           "onTypeFormatting",
           "selectionRanges"
-        ]
+        ],
+        "formatter": "auto"
       },
       "filetypes": ["ruby"]
     },
