Adjust tmux bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 set -g default-terminal "screen-256color"
 set -s set-clipboard on
 
-set -g prefix C-a
+set -g prefix C-z
 unbind C-b
-bind-key C-a send-prefix
+bind-key C-z send-prefix
 
 unbind %
 bind V split-window -h
@@ -11,6 +11,7 @@ bind V split-window -h
 unbind '"'
 bind S split-window -v
 
+bind-key C-l last-window
 
 unbind r
 bind r source-file ~/.tmux.conf
