Enable solargraph autocompletion

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,6 @@
 {
   "codeLens.enable": true,
-  "solargraph.completion": false,
+  "solargraph.completion": true,
   "html.format.templating": true,
   "coc.preferences.formatOnType": true,
   "languageserver": {
