Add coc-yaml plugin

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,6 @@
 {
+  "yaml.enable": true,
+  "yaml.format.enable": true,
   "codeLens.enable": true,
   "solargraph.completion": true,
   "html.format.templating": true,
