Fix vim-workspace NERDTree issue <3

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,10 @@
 set -g default-terminal "screen-256color"
 set -s set-clipboard on
 
-set -g prefix C-z
-unbind C-b
-bind-key C-z send-prefix
+# Change prefix
+set -g prefix C-b
+# unbind C-b
+# bind-key C-z send-prefix
 
 unbind %
 bind V split-window -h
