Improvements from Finlink laptop setup

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -52,5 +52,6 @@
       "rootPatterns": [".clangd", "compile_commands.json", ".git/", ".hg/"],
       "args": ["--compile-commands-dir=build", "--fallback-style=Google"]
     }
-  }
+  },
+  "snippets.ultisnips.pythonPrompt": false
 }
