--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,7 +37,7 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging wi
 set -sg escape-time 10
 
 # tpm plugin
-# To install plugins: <C-a> + i
+# To install plugins: <C-b> + I
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
