Add tmux pane bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,8 @@ unbind '"'
 bind S split-window -v
 
 bind-key C-l last-window
+bind m select-pane -m # Mark pane
+bind M join-pane # Move pane
 
 unbind r
 bind r source-file ~/.tmux.conf
@@ -21,8 +23,6 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
-
-bind -r m resize-pane -Z
 
 set -g mouse on
 
