--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,21 @@
 # Add your preferred git settings here. This will overwrite anything in `core/configs/.gitconfig`.
 [core]
   excludesfile = ~/.gitignore_global
+  pager = delta
 [user]
   name = Lekë Mula
-	email = l.mula@finlink.de
+  email = l.mula@finlink.de
+
+[interactive]
+  diffFilter = delta --color-only
+
+[delta]
+  navigate = true    # use n and N to move between diff sections
+  light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+  side-by-side=true
+
+[merge]
+  conflictstyle = diff3
+
+[diff]
+  colorMoved = default
