--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 [core]
   excludesfile = ~/.gitignore_global
   pager = delta
+	editor = vim
 [user]
   name = Lekë Mula
   email = l.mula@finlink.de
@@ -20,3 +21,9 @@
 
 [diff]
   colorMoved = default
+
+[rebase]
+  autoStash = true
+
+[pull]
+  rebase = true
