--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -867,7 +867,7 @@
 			<key>Shortcut</key>
 			<string></string>
 			<key>Silence Bell</key>
-			<false/>
+			<true/>
 			<key>Sync Title</key>
 			<false/>
 			<key>Tags</key>
@@ -1808,12 +1808,14 @@
 			<string>kNextWindowPointerAction</string>
 		</dict>
 	</dict>
+	<key>Print In Black And White</key>
+	<true/>
 	<key>QuickPasteBytesPerCall</key>
 	<integer>506</integer>
 	<key>QuickPasteDelayBetweenCalls</key>
 	<real>0.015151514671742916</real>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>SplitPaneDimmingAmount</key>
