--- a/coc-settings.json
+++ b/coc-settings.json
@@ -89,10 +89,24 @@
 			],
 			"initializationOptions": {},
 			"settings": {}
-		}
+		},
+    "helm": {
+      "command": "helm_ls",
+      "args": ["serve"],
+      "filetypes": ["helm", "helmfile"],
+      "rootPatterns": ["Chart.yaml"],
+      "settings": {
+        "helm-ls": {
+          "yamlls": {
+            "path": "yaml-language-server"
+          }
+        }
+      }
+    }
   },
   "snippets.ultisnips.pythonPrompt": false,
   "yaml.enable": true,
+  "yaml.completion": true,
   "yaml.format.enable": true,
   "yaml.schemas": {
     "https://raw.githubusercontent.com/microsoft/azure-pipelines-vscode/main/service-schema.json": ["**/.azure/**/*.yaml"]
