--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,7 @@ set -sg escape-time 10
 
 # tpm plugin
 # To install plugins: <C-b> + I
+# To update plugins: <C-b> + U
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
@@ -48,7 +49,11 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 
 set -g @themepack 'powerline/default/cyan'
 
+set -g @resurrect-dir '~/.tmux/resurrect'
+set -g @resurrect-save 'R' # yank history
+set -g @resurrect-restore 'H' # restore history
 set -g @resurrect-capture-pane-contents 'on'
+
 set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
