--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
 # remove delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 10
+set -sg escape-time 0
 
 # tpm plugin
 # To install plugins: <C-b> + I
@@ -45,7 +45,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+# set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
 set -g @themepack 'powerline/default/cyan'
 
@@ -54,7 +54,7 @@ set -g @resurrect-save 'R' # yank history
 set -g @resurrect-restore 'H' # restore history
 set -g @resurrect-capture-pane-contents 'on'
 
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
