--- a/.gitconfig
+++ b/.gitconfig
@@ -36,3 +36,8 @@
 
 [rerere]
 	enabled = true
+[credential]
+	helper = 
+	helper = /usr/local/share/gcm-core/git-credential-manager
+[credential "https://dev.azure.com"]
+	useHttpPath = true
