Fix tmux new window current path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,10 +7,10 @@ set -g prefix C-b
 # bind-key C-z send-prefix
 
 unbind %
-bind V split-window -h
+bind V split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind S split-window -v
+bind S split-window -v -c "#{pane_current_path}"
 
 bind-key C-l last-window
 bind m select-pane -m # Mark pane
