Fix tmux last window binding after update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,6 @@ bind V split-window -h -c "#{pane_current_path}"
 unbind '"'
 bind S split-window -v -c "#{pane_current_path}"
 
-bind-key C-l last-window
 bind m select-pane -m # Mark pane
 bind M join-pane # Move pane
 
@@ -58,3 +57,6 @@ set -g @resurrect-capture-pane-contents 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Does not work before tpm is initialized
+bind-key C-l last-window
