--- a/.gitconfig
+++ b/.gitconfig
@@ -32,12 +32,17 @@
   rebase = true
 
 [push]
-	autoSetupRemote = false
+	autoSetupRemote = true
 
 [rerere]
 	enabled = true
+
 [credential]
 	helper = 
 	helper = /usr/local/share/gcm-core/git-credential-manager
+
 [credential "https://dev.azure.com"]
 	useHttpPath = true
+
+[absorb]
+    maxStack=30
