--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ set -sg escape-time 10
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
+set -g @plugin 'tmux-plugins/tmux-sensible' # basic tmux settings
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
